# LMinterface

./: LICENSE  README.md  go.sh  launch_crazysim.sh  launch_full_system.sh  launch_sitl_two.sh  launch_swarm_nobyobu.sh  launch_swarm_test.sh  my_custom_fix.patch  restart_and_fly.sh  test observations  thesisfindings
docs/: index.html
my_sim_assets/: cocoa_demo.sdf  cocoa_demo_warehouse.sdf
my_sim_assets/pallet/: model.sdf
my_sim_assets/shelf_simple/: model.sdf
ros_ws/src/: simple_flight_test.py
ros_ws/src/cocoa_dialogue/: package.xml  setup.cfg  setup.py
ros_ws/src/cocoa_dialogue/cocoa_dialogue/: __init__.py  web_interface_node.py
ros_ws/src/cocoa_dialogue/cocoa_dialogue/templates/: index.html
ros_ws/src/cocoa_dialogue/config/: ambiguity_rules.yaml  dialogue_params.yaml
ros_ws/src/cocoa_dialogue/launch/: dialogue.launch.py
ros_ws/src/cocoa_ekg/: package.xml  setup.cfg  setup.py
ros_ws/src/cocoa_ekg/cocoa_ekg/: ekg_node.py  knowledge_graph.py
ros_ws/src/cocoa_ekg/config/: objects_dense.yaml  objects_medium.yaml  objects_sparse.yaml
ros_ws/src/cocoa_intent/: package.xml  setup.cfg  setup.py
ros_ws/src/cocoa_intent/cocoa_intent/: __init__.py  intent_extractor_node.py  llama_http_interface.py  llama_ros_interface.py  llm_interface.py  metrics_logger.py  openai_interface.py
ros_ws/src/cocoa_intent/config/: intent_config.yaml
ros_ws/src/cocoa_intent/launch/: intent.launch.py
ros_ws/src/cocoa_intent/prompts/: intent_extraction.txt
ros_ws/src/cocoa_lga/: package.xml  setup.cfg  setup.py
ros_ws/src/cocoa_lga/cocoa_lga/: __init__.py  lga_node.py
ros_ws/src/cocoa_llm_planner/: package.xml  setup.cfg  setup.py
ros_ws/src/cocoa_llm_planner/cocoa_llm_planner/: __init__.py  action_server_node.py  llm_planner_node.py  openai_planner_interface.py  tool_definitions.py
ros_ws/src/cocoa_llm_planner/prompts/: planner_grammar.gbnf  planner_prompt.txt
ros_ws/src/cocoa_msgs/: CMakeLists.txt  package.xml
ros_ws/src/cocoa_msgs/action/: DroneCommand.action  ExecuteTask.action  SwarmCommand.action
ros_ws/src/cocoa_msgs/msg/: ActionPlan.msg  Context.msg  ExecutionFeedback.msg  Intent.msg  SingleIntent.msg  TaskStatus.msg  ThesisMetrics.msg  UserFeedback.msg
ros_ws/src/cocoa_msgs/srv/: GetAllObjects.srv  GetKnowledgeSummary.srv  PlanAction.srv  PlanPath.srv  QueryEKG.srv  QueryLGA.srv
ros_ws/src/cocoa_path_planner/: package.xml  setup.cfg  setup.py
ros_ws/src/cocoa_path_planner/cocoa_path_planner/: __init__.py  astar.py  occupancy_grid.py  path_planner_node.py
ros_ws/src/cocoa_path_planner/config/: planner_params.yaml
ros_ws/src/cocoa_path_planner/resource/: cocoa_path_planner
ros_ws/src/cocoa_path_planner/test/: test_astar.py
ros_ws/src/cocoa_swarm/: package.xml  setup.cfg  setup.py
ros_ws/src/cocoa_swarm/cocoa_swarm/: __init__.py  swarm_manager_node.py
ros_ws/src/cocoa_swarm/cocoa_swarm/coordination/: __init__.py
ros_ws/src/cocoa_swarm/cocoa_swarm/formation/: __init__.py
ros_ws/src/cocoa_swarm/cocoa_swarm/swarm_model/: __init__.py
ros_ws/src/cocoa_swarm/cocoa_swarm/tactics/: __init__.py
ros_ws/src/cocoa_swarm/cocoa_swarm/task_allocation/: __init__.py
ros_ws/src/cocoa_swarm/launch/: swarm.launch.py
ros_ws/src/crazyswarm2/crazyflie/: CMakeLists.txt
ros_ws/src/crazyswarm2/crazyflie/config/: crazyflies.yaml  motion_capture.yaml  real_crazyflies.yaml
ros_ws/src/crazyswarm2/crazyflie/launch/: real_flight.launch.py
ros_ws/src/crazyswarm2/crazyflie/scripts/: crazyflie_server.py  pose_bridge.py  read_object_positions.py
ros_ws/src/ros_gz_crazyflie/ros_gz_crazyflie_bringup/config/: ros_gz_crazyflie_bridge.yaml
ros_ws/src/ros_gz_crazyflie/ros_gz_crazyflie_bringup/launch/: crazyflie_simulation.launch.py
ros_ws/src/ros_gz_crazyflie/ros_gz_crazyflie_gazebo/models/crazyflie1/: model.sdf
ros_ws/src/ros_gz_crazyflie/ros_gz_crazyflie_gazebo/worlds/: crazyflie_world.sdf
ros_ws/thesis_tests/: README.md  TEST_PROCEDURE.md  metrics_logger.py  run_batch_tests.py  single_test.py  test_cases.py
