<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cocoa_llm_planner</name>
  <version>0.0.1</version>
  <description>LLM-based action planner for Cocoa Speech drone control</description>
  <maintainer email="user@todo.todo">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cocoa_msgs</depend>
  <depend>crazyflie_interfaces</depend>
  <depend>action_msgs</depend>
  <depend>llama_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
